<resources>
    <string name="app_name">Character Sheet</string>

    <!--Select Character -->
    <string name="title_activity_main">Character Sheet</string>
    <string name="select_character_alert_title">New Character</string>
    <string name="select_character_alert_message">Open a blank character sheet, or use the creation tool?</string>
    <string name="select_character_alert_positive">Create</string>
    <string name="select_character_alert_negative">Blank</string>
    <string name="select_character_delete_title">Delete Character</string>
    <string name="select_character_delete_message">Are you sure you wish to delete this character?</string>
    <string name="select_character_delete_positive">Yes</string>
    <string name="select_character_delete_negative">No</string>
    <string name="character_select_empty">Click the + button in the toolbar to get started!</string>

    <!--Description-->
    <string name="exp">Exp:</string>
    <string name="size">Size:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="gender">Gender:</string>
    <string name="alignment">Alignment:</string>
    <string name="level">Level:</string>
    <string name="character_class">Class:</string>
    <string name="race">Race:</string>
    <string name="name">Name:</string>
    <string name="details">Details</string>
    <string name="cha">CHA</string>
    <string name="wis">WIS</string>
    <string name="int_mod_name">INT</string>
    <string name="con">CON</string>
    <string name="dex">DEX</string>
    <string name="str">STR</string>
    <string name="bonus">Bonus</string>
    <string name="score">Score</string>
    <string name="modifier">Modifier</string>
    <string name="ability_scores">Ability Scores</string>

    <!--Abilities-->
    <string name="feat">Feat</string>
    <string name="class_feature">Class Feature</string>
    <string name="racial_trait">Racial Trait</string>

    <!--Alert Dialog Standard-->
    <string name="dialog_creation_positive">OK</string>
    <string name="dialog_creation_negative">Cancel</string>
    <string name="ability_dialog_title_field">Title:</string>
    <string name="ability_dialog_description_field">Description:</string>
    <string name="ability_dialog_type_field">Type:</string>
    <string name="spell_dialog_title_field">Name:</string>
    <string name="spell_dialog_description_field">Description:</string>
    <string name="spell_dialog_type_field">Level:</string>
    <string name="skill_name">Skill Name</string>
    <string name="ability">Ability</string>
    <string name="ranks">Ranks:</string>
    <string name="skill_mod">Skill Mod</string>
    <string name="notes">Notes:</string>
    <string name="money">Money</string>
    <string name="slot">Slot:</string>
    <string name="inventory_dialog_weight_field">Weight:</string>
    <string name="inventory_dialog_name_field">Name:</string>
    <string name="inventory_dialog_cost_field">Cost:</string>
    <string name="attacks">Attacks</string>
    <string name="health_separator">/</string>
    <string name="health">Health</string>
    <string name="initiative">Initiative</string>
    <string name="speed">Speed</string>
    <string name="armor_class">Armor Class</string>
    <string name="stats">Stats</string>
    <string name="damage_dice">Damage Dice</string>
    <string name="type">Type</string>
    <string name="attack_bonus">Attack Bonus</string>
    <string name="damage_bonus">Damage Bonus</string>
    <string name="attack_range">Attack Range</string>
    <string name="attack_stat">Attack Stat</string>
    <string name="proficient">Proficient</string>
    <string name="total">Total:</string>
    <string name="dex_mod">Dex Mod</string>
    <string name="add_proficiency">Add Proficiency</string>
    <string name="proficiency">Proficiency</string>
    <string name="armor_type">Armor Type</string>
    <string name="max_dex">Max Dex</string>
    <string name="armor_bonus">Armor</string>
    <string name="shield_bonus">Shield</string>
    <string name="conditional_mods">Conditional Mods</string>
    <string name="cantrips">Cantrips</string>
    <string name="spell_level">Level</string>
    <string name="cast">Used</string>
    <string name="per_day">Per Day</string>
    <string name="notes_empty_text">No notes to display. Click \'+\' button to add a note</string>
    <string name="companions_empty_text">No companions to display. Click \'+\' button to add a companion</string>
    <string name="spells_per_day">Spells Per Day</string>
    <string name="spells_used">Spells Used</string>
    <string name="spell_mod_label">Spell Mod</string>
    <string name="spell_attack">Spell Attack</string>
    <string name="spell_dc">Spell DC</string>
    <string name="school">School</string>
    <string name="spell_range_field">Range</string>
    <string name="spell_casting_time_field">Casting Time</string>
    <string name="spell_dialog_components">Components</string>
    <string name="spell_dialog_duration">Duration</string>
    <string name="spell_dialog_spell_effect">Spell Effect</string>
    <string name="spell_dialog_ritual">Ritual</string>
    <string name="spell_dialog_spell_title">Spell</string>
    <string name="spell_dialog_notes">Notes</string>
    <string name="spell_dialog_name">Name</string>
    <string name="casting">Casting</string>
    <string name="spell_level_bonus">(+spell level)</string>
    <string name="spell_modifier">Spell Modifier</string>
</resources>
