<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_columnWeight="1"
            android:textSize="@dimen/text_field_header"
            android:text="@string/inventory_dialog_name_field"/>
        <EditText
            android:layout_columnWeight="1"
            android:background="@android:drawable/edit_text"
            android:padding="5dp"
            android:gravity="center"
            android:id="@+id/inventory_dialog_name"/>
        <TextView
            android:layout_columnWeight="1"
            android:textSize="@dimen/text_field_header"
            android:text="@string/ability_dialog_description_field"/>
        <EditText
            android:layout_columnWeight="1"
            android:background="@android:drawable/edit_text"
            android:padding="5dp"
            android:gravity="center"
            android:id="@+id/inventory_dialog_description"/>
        <TextView
            android:layout_columnWeight="1"
            android:textSize="@dimen/text_field_header"
            android:text="@string/inventory_dialog_weight_field"/>
        <EditText
            android:layout_columnWeight="1"
            android:background="@android:drawable/edit_text"
            android:padding="5dp"
            android:gravity="center"
            android:text="0"
            android:inputType="number"
            android:id="@+id/inventory_dialog_weight"/>
        <TextView
            android:layout_columnWeight="1"
            android:textSize="@dimen/text_field_header"
            android:text="@string/inventory_dialog_cost_field"/>
        <EditText
            android:layout_columnWeight="1"
            android:background="@android:drawable/edit_text"
            android:padding="5dp"
            android:gravity="center"
            android:id="@+id/inventory_dialog_cost"/>
        <TextView
            android:layout_columnWeight="1"
            android:textSize="@dimen/text_field_header"
            android:text="@string/slot"/>
        <Spinner
            android:layout_height="20dp"
            android:layout_columnWeight="1"
            android:layout_width="200dp"
            android:spinnerMode="dropdown"
            android:id="@+id/inventory_dialog_slot"/>

    </GridLayout>
</ScrollView>