<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:columnCount="3">
        <TextView
            android:ems="10"
            android:gravity="start"
            android:textSize="@dimen/text_column_name"
            android:text="@string/skill_name" />

        <TextView
            android:gravity="center_horizontal"
            android:ems="3"
            android:textSize="@dimen/text_column_name"
            android:text="@string/ability" />

        <TextView
            android:ems="5"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_column_name"
            android:text="@string/skill_mod" />
    </GridLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/skills_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>