<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_field_header"
            android:text="@string/name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:id="@+id/weapon_dialog_title_edittext"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_field_header"
                    android:text="@string/type"/>
                <EditText
                    android:id="@+id/weapon_dialog_type"
                    android:gravity="center"
                    android:background="@android:drawable/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_field_header"
                    android:text="@string/damage_dice"/>
                <EditText
                    android:id="@+id/weapon_dialog_damage_roll"
                    android:gravity="center"
                    android:background="@android:drawable/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_field_header"
                    android:text="@string/attack_bonus"/>
                <TextView
                    android:id="@+id/weapon_dialog_attack_bonus"
                    android:gravity="center"
                    android:background="@android:drawable/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_field_header"
                    android:text="@string/damage_bonus"/>
                <TextView
                    android:id="@+id/weapon_dialog_damage_bonus"
                    android:gravity="center"
                    android:background="@android:drawable/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_field_header"
                    android:text="@string/attack_range"/>
                <EditText
                    android:id="@+id/weapon_dialog_attack_range"
                    android:gravity="center"
                    android:background="@android:drawable/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/text_field_header"
                    android:text="@string/attack_stat"/>
                <Spinner
                    android:id="@+id/weapon_dialog_stat_type"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/weapon_dialog_proficient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proficient"
            android:textSize="@dimen/text_field_header"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_field_header"
            android:text="@string/notes"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:id="@+id/weapon_dialog_description_edittext"/>
    </LinearLayout>
</ScrollView>