<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/dex_mod"/>
            <TextView
                android:id="@+id/initiative_dialog_dex"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/bonus"/>
            <EditText
                android:id="@+id/initiative_dialog_bonus"
                android:layout_width="match_parent"
                android:gravity="center"
                android:inputType="numberSigned"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/proficiency"/>
            <Spinner
                android:id="@+id/initiative_dialog_proficiency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>