<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="rob"
            type="com.app.arejaybee.character_sheet.data_objects.PlayerCharacter" />
    </data>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_field_header"
                android:text="@string/spell_mod_label"/>
            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_field_header"
                android:text="@string/proficiency"/>
            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_field_header"
                android:text="@string/bonus"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_field_header"
                android:text="@{``+rob.spellMod}"/>
            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_field_header"
                android:text="@{``+rob.proficiency}"/>
            <EditText
                android:id="@+id/dialog_spell_attack_bonus"
                android:background="@android:drawable/edit_text"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_field_header"
                android:inputType="numberSigned"
                android:text="@{``+rob.spellAttackBonus}"/>
        </LinearLayout>

    </LinearLayout>

</layout>
